Add February 21st McMaster order blog post and update category from Orders to Purchases

--- a/docs/4in-Liquid-Rocket/blog/posts/february/21/21.md
+++ b/docs/4in-Liquid-Rocket/blog/posts/february/21/21.md
@@ -5,7 +5,7 @@ comments: true
 authors:
   - zeul
 categories:
-  - Orders
+  - Purchases
 ---
 
 We bought the first batch of components from McMaster. [Here](mcmaster_order.pdf) is the order info. The total was $753.35 USD. [BOM](https://docs.google.com/spreadsheets/d/14efr8l9_zVHHuwc9b49hxxgiD6_vnU3ExFUFa4B9Yjg/edit?usp=sharing), [xlsx](<4_- Liquid Rocket BOM.xlsx>)
