--- a/docs/4in-Liquid-Rocket/blog/posts/march/18/18.md
+++ b/docs/4in-Liquid-Rocket/blog/posts/march/18/18.md
@@ -1,6 +1,6 @@
 ---
-title: February 21st McMaster Order
-date: 2025-02-21
+title: March 18th Metal Puchaase
+date: 2025-03-18
 comments: true
 authors:
   - zeul
