Refine calculations and clarify injector characterization in documentation

--- a/docs/4in-Liquid-Rocket/calculations/.calculations.md
+++ b/docs/4in-Liquid-Rocket/calculations/.calculations.md
@@ -8,7 +8,6 @@ This page will cover how to size the thrust chamber for the Mojave Sphinx.
 2. Characterize the injector’s discharge coefficient using a cold flow test, which involves measuring the mass flow rate.
 3. Use the discharge coefficient along with a target chamber pressure to calculate the mass flow rate, then determine the throat size based on this value. Alternatively, you can start with a target mass flow rate, then compute the required chamber pressure and throat size.
 
-
 ## Oxidizer:Fuel Ratio 
 
 Let's first determine what we want out O:F (Oxidizer:Fuel) ratio to be. This will allow us to set tank volume accordingly. We will calculate the stoichiometric ratio, then decide is we want to adjust it to something more oxidizer or fuel rich depending on our structural capabilities for our thrust chamber. 
@@ -51,7 +50,7 @@ $$
 
 ## Injector Characterization 
 
-The pressure drop across the injector should be kept high enough that any abnormalities do not cause back flow. A recommended value if P_c is 60% of feed pressure.
+The pressure drop across the injector should be kept high enough that any abnormalities do not cause back flow. A recommended value if P_c is 60% of feed pressure. We will size the injector such that 
 
 
 
@@ -59,9 +58,7 @@ The pressure drop across the injector should be kept high enough that any abnorm
 
 What are we looking for? 
 
-We want the exit mach number to be as high as possible. This is will be achieved by matching the exit pressure as close to the atmospheric pressure as possible.
-
-pick it?
+We want the exit mach number to be as high as possible. This is will be achieved by matching the exit pressure as close to the atmospheric pressure as possible. It known that the chamber we have is only tested at 250 PSI. 
 
 ## Misc
 
