Add blog posts for March 18th and 22nd, correcting titles and adding invoice image

--- a/docs/4in-Liquid-Rocket/blog/posts/march/18/18.md
+++ b/docs/4in-Liquid-Rocket/blog/posts/march/18/18.md
@@ -1,5 +1,5 @@
 ---
-title: March 18th Metal Puchaase
+title: March 18th Metal Purchase
 date: 2025-03-18
 comments: true
 authors:
@@ -8,4 +8,4 @@ categories:
   - Purchases
 ---
 
-We bought the metal today. This is the quote that was paid for ![alt text](IMG_1342.jpg).
+We bought the metal today. This is the quote that was paid for .
