Update blog posts: add image to March 18th entry, create new February 13th post, and enhance February 21st entry with additional details

--- a/docs/4in-Liquid-Rocket/blog/posts/march/18/18.md
+++ b/docs/4in-Liquid-Rocket/blog/posts/march/18/18.md
@@ -8,4 +8,4 @@ categories:
   - Purchases
 ---
 
-We bought the metal today. This is the quote that was paid for .
+We bought the metal today. This is the quote that was paid for ![alt text](IMG_1342.jpg).
